# models/pass_reset.go
@@ -1,0 +1,86 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PassReset pass reset
+// swagger:model PassReset
+type PassReset struct {
+
+	// id profile
+	// Required: true
+	IDProfile *int64 `json:"id_profile"`
+
+	// password new
+	// Required: true
+	PasswordNew *string `json:"password_new"`
+
+	// password old
+	PasswordOld string `json:"password_old,omitempty"`
+}
+
+// Validate validates this pass reset
+func (m *PassReset) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateIDProfile(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validatePasswordNew(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PassReset) validateIDProfile(formats strfmt.Registry) error {
+
+	if err := validate.Required("id_profile", "body", m.IDProfile); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PassReset) validatePasswordNew(formats strfmt.Registry) error {
+
+	if err := validate.Required("password_new", "body", m.PasswordNew); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PassReset) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PassReset) UnmarshalBinary(b []byte) error {
+	var res PassReset
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
